--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.HomeTimelineActivity"
+            android:name=".activities.TabsActivity"
             android:label="@string/title_activity_home_timeline"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
@@ -57,6 +57,8 @@
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity android:name=".activities.DetailActivity" >
+        </activity>
+        <activity android:name=".activities.ProfileActivity" >
         </activity>
     </application>
 
