--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,9 +56,9 @@
             android:label="@string/title_activity_tweet_composition"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
-        <activity android:name=".activities.DetailActivity" >
-        </activity>
-        <activity android:name=".activities.ProfileActivity" >
+        <activity
+            android:name=".activities.ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
